static/style.css
body {
    position: relative;
    font-family: "Robotomono", monospace, Geneva, Tahoma, sans-serif;
    margin: 0;
    padding: 0;
}

.headers {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 100%;
    height: 100%;

    background-color: #3f230d;
    border-style: solid;
    border-color: #ffcb05;
    border-width: 5px;
    border-right: 0px;
    border-left: 0px;
    border-top: 0px;

    font-family: "Robotomono", monospace, Geneva, Tahoma, sans-serif;
    font-size: 20px;
}

.headers img {
    height: 100px;
    width: 100px;
    border: none;

  
}

.headers button {
    background-color: #3f230d;

    width: 180px;
    height: 90px;
    font-size: 20px;
    font-weight: bolder;

    border-color: #C6b9AD;
    border-radius: 5px;
    border-width: 3px;
    border-style: solid;

    color: #ffcb05;
}

.topbar {
    height: 100px;
    width: 500px;

    position: center;

    border-width: 3px;
    border-radius: 10px;

    color: #ffcb05;
    text-align: center;

   
    padding-left: 20px;
    padding-right: 20px;   
}

.content {
    display: flex;
    justify-content: center;
    align-items: center; 
    flex-direction: column;

    margin-top: 30px;
}

.content p {
    color: white
}

.card {
    display: flex;
    justify-content: center;
    align-items: center; 
    flex-direction: column;

    height: fit-content;
    width: 50%;
    background-color: #3f230d;

    border-style: solid;
    border-color: #9f9282;
    border-width: 5px;
    border-radius: 10px;

    font-family: "Robotomono", monospace, Geneva, Tahoma, sans-serif;
    font-size: 20px;
    color: #ffcb05;

    padding-left: 20px;
    padding-right: 20px;

    margin-top: 20px;
}

.statscard {
    display: flex;
    justify-content: center;
    align-items: center; 
    flex-direction: row;
    

    height: fit-content;
    width: 50%;
    background-color: #3f230d;

    border-style: solid;
    border-color: #9f9282;
    border-width: 5px;
    border-radius: 10px;

    font-family: "Robotomono", monospace, Geneva, Tahoma, sans-serif;
    font-size: 20px;
    color: #ffcb05;

    padding-left: 20px;
    padding-right: 20px;

    margin-top: 20px;

    
}

.stats {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    height: fit-content;
    width: 30%;

    margin-right: 150px;
}

img {
    max-width: 100%;
    height: 300px;

    border-style: solid;
    border-color: #9f9282;
    border-width: 5px;
    border-radius: 10px;

}    

